<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragment.UserFragment">

    <!--TODO: Remove hardcoded login_data-->

    <!--Log in-->
    <TextView
        style="@style/Text30spWrap"
        android:layout_gravity="center"
        android:text="@string/fragment_user_title" />

    <EditText
        android:id="@+id/login_usernameET"
        style="@style/Text20spWrap"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text"
         />

    <EditText
        android:id="@+id/login_passwordET"
        style="@style/Text20spWrap"
        android:autofillHints="@string/username"
        android:hint="@string/password"
        android:inputType="textPassword"
         />

    <Button
        android:id="@+id/login_loginButton"
        style="@style/Text25spWrap"
        android:text="@string/fragment_user_login" />

    <Button
        android:id="@+id/login_signUpButton"
        style="@style/Text25spWrap"
        android:text="@string/login_create_account" />

    <Button
        android:id="@+id/fragmentUserLogoutButton"
        style="@style/Text25spWrap"
        android:text="@string/fragment_user_logout" />

</LinearLayout>