<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragment.SignUpFragment">

    <!-- Sign up -->
    <TextView
        style="@style/Text30spWrap"
        android:layout_gravity="center"
        android:text="@string/signup_title" />

    <EditText
        android:id="@+id/signUp_usernameET"
        style="@style/Text15spWrap"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/signUp_passwordET"
        style="@style/Text15spWrap"
        android:autofillHints="@string/username"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signUp_passwordConfirmET"
        style="@style/Text15spWrap"
        android:autofillHints="@string/username"
        android:hint="@string/password_confirm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUp_createAccountButton"
        style="@style/Text15spWrap"
        android:text="@string/signUp_signUp" />

</LinearLayout>