<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_exercise_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragment.ExerciseDetailFragment">

    <TextView
        style="@style/TextView30sp"
        android:text="@string/show_exercise_name" />

    <TextVie
        android:id="@+id/show_exercise_tv_name"
        style="@style/TextView20spWithLeftPadding" />

    <TextView
        style="@style/TextView30sp"
        android:text="@string/show_exercise_description" />

    <TextView
        android:id="@+id/show_exercise_tv_description"
        style="@style/TextView20spWithLeftPadding" />

    <TextView
        style="@style/TextView30sp"
        android:text="@string/show_exercise_image" />

    <ImageView
        android:id="@+id/show_exercise_tv_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/show_exercise_imageview_contentdescription" />
</LinearLayout>